serving/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ${DEPLOY_NAME}-inference-gateway
  labels:
    istio.io/enable-inference-extproc: "true"
spec:
  infrastructure:
    parametersRef:
      group: ""
      kind: ConfigMap
      name: ${DEPLOY_NAME}-gateway-options
  gatewayClassName: istio
  listeners:
  - name: default
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: v1
kind: Service
metadata:
  name: ${DEPLOY_NAME}-inference-gateway-istio
  labels:
    gateway.networking.k8s.io/gateway-name: ${DEPLOY_NAME}-inference-gateway
    istio.io/enable-inference-extproc: "true"
spec:
  selector:
    gateway.networking.k8s.io/gateway-name: ${DEPLOY_NAME}-inference-gateway
  ports:
  - name: status-port
    port: 15021
    protocol: TCP
    targetPort: 15021
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${DEPLOY_NAME}-route
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: ${DEPLOY_NAME}-inference-gateway
  rules:
  - backendRefs:
    - group: inference.networking.x-k8s.io
      kind: InferencePool
      name: ${DEPLOY_NAME}-infpool
      port: 8000
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
    timeouts:
      backendRequest: "0s"
      request: "0s"
